send message to others

--- a/SignalRServer/Views/Home/Index.cshtml
+++ b/SignalRServer/Views/Home/Index.cshtml
@@ -7,14 +7,24 @@
         <div class="control-group">
             <div>
                 <label for="broadcast">Message</label>
-                <input type="text" id="broadcast" name="broadcast" />
+                <input type="text" id="broadcast" name="broadcast"/>
             </div>
             <button id="btn-broadcast">Broadcast</button>
         </div>
+    </div>
+
+    <div class='control-group'>
+        <div>
+            <label for='others-msg'>Message</label>
+            <input type='text' id='others-msg' name='others-msg'/>
+        </div>
+        <button id='btn-others'>Send to Others</button>
     </div>
 
     <div class="col-md-7">
         <p>SignalR Messages:</p>
         <pre id="signalr-message-panel"></pre>
     </div>
+
+
 </div>
