send message to the caller

--- a/SignalRServer/Views/Home/Index.cshtml
+++ b/SignalRServer/Views/Home/Index.cshtml
@@ -21,10 +21,19 @@
         <button id='btn-others'>Send to Others</button>
     </div>
 
-    <div class="col-md-7">
-        <p>SignalR Messages:</p>
-        <pre id="signalr-message-panel"></pre>
+
+
+    <div class='control-group'>
+        <div>
+            <label for='self-message'>Message</label>
+            <input type='text' id='self-message' name='self-message'/>
+        </div>
+        <button id='btn-self-message'>Send to Self</button>
     </div>
 
-
+    
+        <div class="col-md-7">
+            <p>SignalR Messages:</p>
+            <pre id="signalr-message-panel"></pre>
+        </div>
 </div>
