send message to group

--- a/SignalRServer/Views/Home/Index.cshtml
+++ b/SignalRServer/Views/Home/Index.cshtml
@@ -48,6 +48,33 @@
     </div>
 
 
+    <div class='control-group'>
+        <div>
+            <label for='group-message'>Message</label>
+            <input type='text' id='group-message' name='group-message'/>
+        </div>
+        <div>
+            <label for='group-name'>Group Name</label>
+            <input type='text' id='group-name' name='group-name'/>
+        </div>
+        <button id='btn-group-message'>Send to Group</button>
+    </div>
+    <div class='control-group'>
+        <div>
+            <label for='group-to-join'>Group Name</label>
+            <input type='text' id='group-to-join' name='group-to-join'/>
+        </div>
+        <button id='btn-join-group'>Join Group</button>
+    </div>
+    <div class='control-group'>
+        <div>
+            <label for='group-to-leave'>Group Name</label>
+            <input type='text' id='group-to-leave' name='group-to-leave'/>
+        </div>
+        <button id='btn-leave-group'>Leave Group</button>
+    </div>
+
+
     <div class="col-md-7">
         <p>SignalR Messages:</p>
         <pre id="signalr-message-panel"></pre>
